# cli-calculator

./: .gitignore  CMakeLists.txt  README.md  logs.txt
include/calculate/: calculate.h
include/commandRegister/: commandRegister.h
include/info/: info.h
include/interface/: CMakeLists.txt  interface.cpp  interface.h
src/: CMakeLists.txt  main.cpp
src/calculate/: CMakeLists.txt  calculate.cpp
src/commandRegister/: CMakeLists.txt  commandRegister.cpp
src/info/: CMakeLists.txt  info.cpp
src/interface/: CMakeLists.txt  interface.cpp
